<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:orientation="vertical"
    android:fitsSystemWindows="false"
    tools:context=".FormActivity"
    android:background="@drawable/nice_img1"
    android:backgroundTint="#A8FFFFFF"
    android:backgroundTintMode="src_over">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:padding="5dp"
            android:text="@string/form_title"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="5dp"
            android:text="@string/form_sub_title"
            android:textColor="@color/gray"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:backgroundTintMode="src_over">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/formName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_full_name"
                android:inputType="textNoSuggestions"
                android:lines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:backgroundTintMode="src_over">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/formHobbies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_hobbies"
                android:inputType="textNoSuggestions"
                android:lines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/formGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_gender"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/formGender"
                android:background="@color/transparent"
                android:backgroundTintMode="src_over">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/gender_male" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_female" />

                <RadioButton
                    android:id="@+id/rbOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_other" />
            </RadioGroup>

            <TextView
                android:id="@+id/formCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/form_country" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:background="@color/transparent">

                <Spinner
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/spinnerCountry"
                    android:entries="@array/countries" />
            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxAgreement"
                    android:layout_width="116dp"
                    android:layout_height="42dp"
                    android:layout_toStartOf="@+id/textViewAgreement"
                    android:layout_toLeftOf="@+id/textViewAgreement"
                    android:background="@color/transparent"
                    android:backgroundTintMode="src_over"
                    android:checked="false"
                    android:text="@string/checkbox_agreement"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textViewAgreement"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textViewAgreement"
                    android:layout_width="210dp"
                    android:layout_height="42dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:backgroundTintMode="src_over"
                    android:padding="5dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/information_agreement"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.609"
                    app:layout_constraintStart_toEndOf="@+id/checkBoxAgreement"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_weight="2"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="5dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardCornerRadius="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/action_submit"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

</LinearLayout>