<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:contentDescription="@string/delete_icon_desc"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".SavedFormsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <TextView
                android:id="@+id/savedFormTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:padding="5dp"
                android:text="@string/saved_form_title"
                android:textColor="@color/black"
                android:textSize="35sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_delete"
                android:contentDescription="@string/delete_icon_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.991"
                app:layout_constraintStart_toEndOf="@+id/savedFormTitle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.933" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/savedFormEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="5dp"
            android:text="@string/saved_form_subtitle"
            android:textColor="@color/gray"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/savedFormName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/prompt_full_name"
                android:inputType="text"
                android:lines="2"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/savedFormHobbies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/prompt_hobbies"
                android:inputType="text"
                android:lines="4"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:id="@+id/savedFormGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/form_gender"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/savedRgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/formGender">

                <RadioButton
                    android:id="@+id/savedRbMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/gender_male" />

                <RadioButton
                    android:id="@+id/savedRbFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/gender_female" />

                <RadioButton
                    android:id="@+id/savedRbOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/gender_other" />
            </RadioGroup>

            <TextView
                android:id="@+id/savedFormCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/form_country"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/savedSpinnerCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/countries"
                app:layout_constraintBottom_toBottomOf="@+id/savedFormCountry"
                app:layout_constraintStart_toEndOf="@+id/savedFormCountry"
                app:layout_constraintTop_toTopOf="@+id/savedFormCountry" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/savedCheckBoxAgreement"
                    android:layout_width="116dp"
                    android:layout_height="42dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_toStartOf="@+id/savedTextViewAgreement"
                    android:layout_toLeftOf="@+id/savedTextViewAgreement"
                    android:background="@color/transparent"
                    android:backgroundTintMode="src_over"
                    android:checked="false"
                    android:text="@string/checkbox_agreement"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/savedTextViewAgreement"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/savedTextViewAgreement"
                    android:layout_width="221dp"
                    android:layout_height="42dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:backgroundTintMode="src_over"
                    android:padding="5dp"
                    android:paddingHorizontal="20dp"
                    android:text="@string/information_agreement"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.609"
                    app:layout_constraintStart_toEndOf="@+id/savedCheckBoxAgreement"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/savedFormImg"
            android:layout_weight="3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/decorative_img_desc"
            app:srcCompat="@drawable/nice_img3" />
    </LinearLayout>
</LinearLayout>