<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:weightSum="7"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:padding="5dp"
            android:text="@string/signup_title"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="5dp"
            android:text="@string/signup_subtitle"
            android:textColor="@color/gray"
            android:textSize="20sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_weight="3"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:text="admin@test.com" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/purple_500"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:lines="1"
                android:text="123456" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/purple_500"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signupRePassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_password_rep"
                android:inputType="textPassword"
                android:lines="1"
                android:text="123456" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/nice_img2"
        android:backgroundTint="#A8FFFFFF"
        android:backgroundTintMode="src_over">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            app:cardCornerRadius="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/action_signup"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/signup_already_member"
            android:textColor="@color/black"
            android:focusable="true" />
    </RelativeLayout>

</LinearLayout>